Tweak nav, add methods, fix overflow

--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -83,6 +83,7 @@ th {
 h1, h2, h3, h4, h5, h6 {
   margin-top: 0;
   font-weight: 300;
+  word-wrap: break-word;
 }
 
 h1 { font-size: 4.0rem; line-height: 1.2;  letter-spacing: -.1rem;}
@@ -171,7 +172,7 @@ dl dd:after {
 }
 
 .sidebar {
-  padding: 20px 20px 0 20px;
+  padding: 20px;
   white-space:nowrap;
   overflow-y: auto;
 
@@ -183,8 +184,8 @@ dl dd:after {
     padding: 0 0 0 10px;
     margin: 0;
     list-style: none;
-    &.api{
-      padding: 0
+    &.api .title {
+      display: none;
     }
   }
 
@@ -210,10 +211,15 @@ dl dd:after {
   }
 }
 
+.api-key > .endpoint:first-child{
+  padding-left: 1px;
+}
 .endpoint {
   font-size: 10px;
   padding: 0 2px;
   position: relative;
+  margin-left: auto;
+  text-transform: uppercase;
 }
 
 h3 .endpoint {
@@ -221,33 +227,19 @@ h3 .endpoint {
   font-size: 19px;
 }
 
-.endpoint.PUT,
-.endpoint.put {
-  color: $color-put;
-  &:after {
-    content: "PUT";
-  }
-}
-
-.endpoint.DELETE,
-.endpoint.delete {
-  color: $color-delete;
-  &:after {
-    content: "DELETE";
-  }
-}
-
-.endpoint.GET,
-.endpoint.get {
-  &:after {
-    content: "GET";
-  }
-}
 .sidebar .api a{
-  padding-left: .25em;
+  padding-right: .25em;
   border-right-width: .25em;
   border-right-style: solid;
   margin-bottom: 1px;
+  display: flex;
+  align-items: flex-start;
+  span {
+    max-width: 98%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+
+  }
 }
 
 .GET, .get {
@@ -271,20 +263,6 @@ h3 .endpoint {
   border-color: $color-delete;
 }
 
-.endpoint.POST,
-.endpoint.post {
-  &:after {
-    content: "POST";
-  }
-}
-
-.endpoint.PATCH,
-.endpoint.patch {
-  color: $color-patch;
-  &:after {
-    content: "PATCH";
-  }
-}
 .main {
   margin: 0 0 0 $nav-width;
   border-left: 1px solid $color-border;
@@ -413,7 +391,7 @@ hr {
         }
 
         &.active:hover {
-          border-color: transparent; // TODO
+          border-color: transparent;
         }
       }
     }
@@ -533,9 +511,6 @@ header {
 
     h1 {
       box-shadow: inset -10px 0 10px -10px rgba(0, 0, 0, 0.1);
-    }
-    .api .title {
-      display: none;
     }
   }
 }
