--- a/css/style.scss
+++ b/css/style.scss
@@ -3,7 +3,7 @@ layout: null
 sitemap: false
 ---
 
-$nav-width: 300px;
+$nav-width: 320px;
 $mobile-break: 700px;
 
 $color-brand: #d92526;
